bin/testsuite/tests/compiler/src/errors/compiler1378.swg
#global testerror "Err0727"

interface TOTO
{
    print: func(bool)
}